spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -11061,7 +11061,7 @@ body.active-side-header.slide-right .page_header_side {
 
 @media (max-width: 767px) {
 	#about [class*="container"] {
-		padding-top: 70px;
+		padding-top: 80px;
 	}
 }
 
